<resources>
    <string name="app_name">Witysu</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="registration_fragment_label">Registration Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="submit">Подтвердить</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_second">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dialogue">Dialogue</string>
    <string name="title_search">Search</string>
    <string name="title_likes">Likes</string>
    <!-- Strings related to login -->
    <string name="prompt_phone">Логин</string>
    <string name="password_reg">Пароль</string>
    <string name="login_reg">Логин</string>
    <string name="birthday">День Рождения</string>
    <string name="phone_number">Номер Телефона</string>
    <string name="lastname">Харченко</string>
    <string name="username">Даня Харченко</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in">Регистрация</string>
    <string name="action_sign_in_short">Войти</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="text_last_name">Харченко</string>
    <string name="text_firstName">Даня</string>
    <string name="text_languages">Язык: Русский, Английский</string>
    <string name="height_acc">Рост: 180 см</string>
    <string name="smoke_acc">Отношение к курению: курю</string>
    <string name="alco_acc">Отношение к алкоголю: редко выпиваю</string>
    <string name="settings_child">Отношение к детям: положительное</string>
    <string name="settings_pets">Отношение к домашним животным: положительное</string>
    <string name="edit_btn">Изменить</string>
    <string name="about_acc1">О партнере: хоть какой-нибудь.</string>

    <string name="about_acc">О себе: Родился и вырос на окраине культурной столицы, живу в полной семье всем доволен увлекаюсь волейболом.</string>
    <string name="username1">Валерия Жмуренко</string>
    <string name="alco_acc1">Отношение к алкоголю: отрицательное</string>
    <string name="userheight">Рост: 160 см</string>
    <string name="child_acc">Отношение к детям: отрицательное</string>
    <string name="pets_acc">Отношение к питомцам: положительное</string>
    <string name="smoke_acc1">Отношение к курению: не курю</string>
    <string name="about_acc2">О себе: Доброго времени суток. Девушка писала пост по поводу кисты. Сегодня третий день как я лично от этого всего избавилась. По порядку опишу для тех кто сомневается, боится, готовится к удалению. Сначала был гинеколог, узи на котором врач сказала - таблетками ничего не вылечить - ложитесь на операцию. Взяла отпуск. За неделю до операции началась беготня по сборам анализов. В разных больницах разный список. В связи с обстановкой выбрала платную операцию, но анализы можно делать в любом месте. Большинство анализов делают 3-4 дня. День операции. Все оплачено, переодеваюсь в медицинскую рубашку, бахилы, шапочку. Наркоз был шикарный - отключилась почти за минуту после укола. Проснулась уже после всего на солнышке у окошка в реанимации. После пробуждения отвезли в палату. Операция была в 12, кормили овсяночкой на воде часов в 6. После операции сказали можно ходить. Мой первый заход был не очень успешен - в голове помутнело. Почти сутки во мне была трубка выходила из живота. Поставили три капельницы, делали уколы с антибиотиками, перевязки. 30 числа в 12 была операция, 2 числа в 10 утра я уже была отправлена домой. Сейчас дома чувствуется некоторая слабость, но в целом чувствую себя комфортно. Если возникли вопросы - пишите. Всем благ и будьте здоровы.</string>
    <string name="about_acc3">О партнере: Несколько месяцев назад стала накатывать жуткая усталость, прям до состояния "лежунемогувстать". При наличии двух детей возраста год и три на это закрывались глаза, со вздохом - это пройдет, они скоро подрастут, мне станет легче, я буду больше спать и т.д))</string>
    <string name="lang">Язык: Русский</string>
</resources>