<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.witysu.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dialogue"
        android:name="com.example.witysu.ui.dialogue.DialogueFragment"
        android:label="@string/title_dialogue"
        tools:layout="@layout/fragment_dialogue" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.witysu.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_likes"
        android:name="com.example.witysu.ui.likes.LikesFragment"
        android:label="@string/title_likes"
        tools:layout="@layout/fragment_likes" />
</navigation>