<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:orientation="vertical"
    tools:context=".ui.search.SearchFragment">


    <ScrollView
        android:layout_width="409dp"
        android:layout_height="620dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >


            <ImageView
                android:id="@+id/user_photo"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_marginTop="30dp"
                android:src="@drawable/ic_profile"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.064"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/user_name"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/username1"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/fab_margina"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.696"
                app:layout_constraintStart_toEndOf="@+id/user_photo"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/user_height"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/colorAccent2"
                android:text="@string/userheight"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/fab_margin"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="20dp"
                app:layout_constraintTop_toBottomOf="@+id/user_photo" />

            <TextView
                android:id="@+id/user_language"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:text="@string/lang"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/fab_margin"
                android:layout_marginTop="4dp"
                android:background="@color/colorAccent2"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="20dp"
                app:layout_constraintTop_toBottomOf="@id/user_height" />

            <TextView
                android:id="@+id/user_alcohol"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:text="@string/alco_acc1"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/fab_margin"
                android:layout_marginTop="4dp"
                android:background="@color/colorAccent2"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="20dp"
                app:layout_constraintTop_toBottomOf="@id/user_language" />

            <TextView
                android:id="@+id/user_child"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                style="@style/normalText"
                android:text="@string/child_acc"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/fab_margin"
                android:layout_marginTop="4dp"
                android:background="@color/colorAccent2"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="20dp"
                app:layout_constraintTop_toBottomOf="@id/user_alcohol" />

            <TextView
                android:id="@+id/user_pets"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                style="@style/normalText"
                android:text="@string/pets_acc"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/fab_margin"
                android:layout_marginTop="4dp"
                android:background="@color/colorAccent2"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="20dp"
                app:layout_constraintTop_toBottomOf="@id/user_child" />


            <TextView
                android:id="@+id/user_smoke"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:text="@string/smoke_acc1"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/fab_margin"
                android:layout_marginTop="4dp"
                android:background="@color/colorAccent2"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="20dp"
                app:layout_constraintTop_toBottomOf="@+id/user_pets" />

            <TextView
                android:id="@+id/user_about_you"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:text="@string/about_acc2"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/fab_margin"
                android:layout_marginTop="4dp"
                android:background="@color/colorAccent2"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="20dp"
                app:layout_constraintTop_toBottomOf="@+id/user_smoke"/>


            <TextView
                android:id="@+id/user_about"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:text="@string/about_acc3"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/fab_margin"
                android:layout_marginTop="4dp"
                android:background="@color/colorAccent2"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="20dp"
                app:layout_constraintTop_toBottomOf="@+id/user_about_you"/>
        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/bottom_toolbar"
        android:layout_width="match_parent"
        android:background="?attr/colorPrimary"
        android:layout_height="?attr/actionBarSize"
    app:popupTheme="@style/mainToolbar"
        />


</androidx.appcompat.widget.LinearLayoutCompat>