<?xml version="1.0" encoding="utf-8"?>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.home.HomeFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/settings_header_bloc"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/settings_user_photo"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginStart="28dp"
                android:src="@drawable/ic_profile"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/settings_full_name"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/app_margin"
                android:layout_marginTop="@dimen/app_small_margin"
                android:text="@string/username"
                android:textColor="@color/colorGrey"
                android:textSize="@dimen/fab_margin"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/settings_user_photo"
                app:layout_constraintTop_toTopOf="@id/settings_user_photo" />

            <TextView
                android:id="@+id/settings_language"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/app_margin"
                android:text="Английский, Русский"
                android:textColor="@color/colorGrey"
                android:textSize="@dimen/fab_margin"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/app_small_margin"
                app:layout_constraintStart_toEndOf="@id/settings_user_photo"
                app:layout_constraintTop_toBottomOf="@id/settings_full_name" />

            <TextView
                android:id="@+id/settings_height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="12dp"
                android:text="@string/height_acc"
                android:textColor="@color/colorGrey"
                android:textSize="@dimen/smallText"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/settings_user_photo"
                app:layout_constraintTop_toBottomOf="@id/settings_language" />



            <View
                android:id="@+id/separator1"
                style="@style/separator"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/settings_user_photo" />

            <TextView
                android:id="@+id/settings_alcohol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/alco_acc"
                android:textColor="@color/colorGrey"
                android:textSize="@dimen/smallText"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.197"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/separator1" />


        </androidx.constraintlayout.widget.ConstraintLayout>



        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/settings_btn_change_number_phone"
            style="@style/settingsButtons"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_header_bloc">

            <TextView
                android:id="@+id/settings_child"
                style="@style/normalText"
                android:textColor="@color/colorGrey"
                android:textSize="@dimen/smallText"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.096"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/settings_btn_change_number_phone"
                android:text="@string/settings_child" />



        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/settings_btn_change_username"
            style="@style/settingsButtons"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_btn_change_number_phone">
            <View
                style="@style/separator"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/settings_btn_change_username" />
            <TextView
                android:id="@+id/settings_pets"
                style="@style/normalText"
                android:textColor="@color/colorGrey"
                android:textSize="@dimen/smallText"
                android:textStyle="bold"
                android:layout_marginStart="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.285"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/settings_btn_change_username"
                android:text="@string/settings_pets" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/settings_btn_change_bio"
            style="@style/settingsButtons"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_btn_change_username">

            <TextView
                android:id="@+id/settings_smoke"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/smoke_acc"
                android:textColor="@color/colorGrey"
                android:textSize="@dimen/smallText"
                android:textStyle="bold"
                android:layout_marginBottom="35dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

            <View
                style="@style/separator"
                android:layout_marginTop="28dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/settings_smoke" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_about"
        style="@style/settingsButtons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_btn_change_bio">

        <TextView
            android:id="@+id/settings_about_you"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"

            android:text="@string/about_acc"
            android:textColor="@color/colorGrey"
            android:textSize="@dimen/smallText"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_about_u"
        style="@style/settingsButtons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_about">

        <TextView
            android:id="@+id/settings_about_y"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"

            android:text="@string/about_acc1"
            android:textColor="@color/colorGrey"
            android:textSize="@dimen/smallText"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>